@@ -1,4 +1,4 @@
-#Thu Oct 11 08:02:24 EST 2007
+#Wed Oct 24 22:47:29 EST 2007
 major_version=1.6b
-minor_version=69
+minor_version=70
 app_name=eLife
